// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignIn component: Should render 1`] = `
<SignInRenderer
  email=""
  error=""
  handleChangeText={[Function]}
  handleSignIn={[Function]}
  password=""
/>
`;

exports[`SignIn component: SignInRenderer renders when no error message 1`] = `
<Component
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Component
    style={
      Object {
        "fontSize": 30,
      }
    }
  >
    Sign In
  </Component>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    onChangeText={[Function]}
    placeholder="email"
    style={
      Object {
        "borderColor": "gray",
        "borderWidth": 1,
        "height": 40,
        "marginTop": 8,
        "width": "90%",
      }
    }
    underlineColorAndroid="transparent"
    value=""
  />
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    onChangeText={[Function]}
    placeholder="Password"
    secureTextEntry={true}
    style={
      Object {
        "borderColor": "gray",
        "borderWidth": 1,
        "height": 40,
        "marginTop": 8,
        "width": "90%",
      }
    }
    underlineColorAndroid="transparent"
    value=""
  />
  <Button
    onPress={[Function]}
    title="Submit"
  />
  <Button
    onPress={[Function]}
    title="Don't have an account? Sign Up"
  />
  <Button
    onPress={[Function]}
    title="Reset Password"
  />
</Component>
`;

exports[`SignIn component: SignInRenderer renders with error message 1`] = `
<Component
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Component
    style={
      Object {
        "fontSize": 30,
      }
    }
  >
    Sign In
  </Component>
  <Component
    style={
      Object {
        "color": "red",
      }
    }
  >
    Some error occurred
  </Component>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    onChangeText={[Function]}
    placeholder="email"
    style={
      Object {
        "borderColor": "gray",
        "borderWidth": 1,
        "height": 40,
        "marginTop": 8,
        "width": "90%",
      }
    }
    underlineColorAndroid="transparent"
    value=""
  />
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    onChangeText={[Function]}
    placeholder="Password"
    secureTextEntry={true}
    style={
      Object {
        "borderColor": "gray",
        "borderWidth": 1,
        "height": 40,
        "marginTop": 8,
        "width": "90%",
      }
    }
    underlineColorAndroid="transparent"
    value=""
  />
  <Button
    onPress={[Function]}
    title="Submit"
  />
  <Button
    onPress={[Function]}
    title="Don't have an account? Sign Up"
  />
  <Button
    onPress={[Function]}
    title="Reset Password"
  />
</Component>
`;
